header color and barplot color changes as well as some minor layout changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container is-fluid">
+<div class="container is-fluid navbar-container">
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <img routerLink="/" src="assets/caddie_logo.png" class="menu-icon is-hoverable navbar-item logo" alt="logo"/>
