--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -1,7 +1,10 @@
 $sidebar-width: 38vw;
-$navbar-height: 60px;
+$sidebar-width-max: 665px;
+$navbar-height: 100px;
 $row-data-selector-height: auto;
 $network-footer-height: 75px;
+
+$navbar-background-color: #86D16B;//#D0D8D2;//#F5F0F5;
 
 $network-node-color: #143d1f;
 $network-cancer-node-color: #5b005b;
