--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -4,7 +4,7 @@ $navbar-height: 100px;
 $row-data-selector-height: auto;
 $network-footer-height: 75px;
 
-$navbar-background-color: #86D16B;//#D0D8D2;//#F5F0F5;
+$navbar-background-color: #143d1f;//#86D16B;//#D0D8D2;//#F5F0F5;
 
 $network-node-color: #143d1f;
 $network-cancer-node-color: #5b005b;
