--- a/src/app/pages/citation-page/citation-page.component.html
+++ b/src/app/pages/citation-page/citation-page.component.html
@@ -1,15 +1,12 @@
 <div class="scroll">
   <div class="content">
-    <section class="hero is-primary">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">Cite CoVex</h1>
-        </div>
-      </div>
-    </section>
 
     <div class="hero container">
       <div class="column is-8 is-offset-2">
+        <div class="container has-text-centered">
+          <img src="assets/caddie_logo.png">
+          <h2 class="subtitle is-3"> A Coronavirus Explorer </h2>
+        </div>
         <div class="content">
           <h2>Citation</h2>
           <p>
