changes to layout

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -239,7 +239,7 @@
               </app-cancertype-tile>
             </div>
           </div>
-          <div class="column is-12">
+          <div>
             <app-cancertype-comorbidities-tile
               [selectedCancerTypeItems]="selectedCancerTypeItems"
               [selectedCancerDataset]="selectedDataset"
