--- a/src/app/components/dataset-tile/dataset-tile.component.html
+++ b/src/app/components/dataset-tile/dataset-tile.component.html
@@ -10,7 +10,7 @@
       </ng-select>
     </div>
 
-    <div class="column is-narrow">
+    <div class="column">
       <div *ngIf="selectedDataset" class="info">
 
         <div *ngIf="selectedDataset.link"><a href="{{selectedDataset.link}}" target="_blank"><i class="fas fa-link"></i> Source</a></div>
