--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,10 @@
           <span class="icon"><i class="fa fa-project-diagram"></i></span>
           <span>Explorer</span>
         </a>
+        <a routerLink="/drug-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
+          <span class="icon"><i class="fa fa-search"></i></span>
+          <span>Drug</span>
+        </a>
         <a routerLink="/cite" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-feather"></i></span>
           <span>Cite</span>
