--- a/src/app/components/dataset-tile/dataset-tile.component.html
+++ b/src/app/components/dataset-tile/dataset-tile.component.html
@@ -15,7 +15,7 @@
 
         <div *ngIf="selectedDataset.link"><a href="{{selectedDataset.link}}" target="_blank"><i class="fas fa-link"></i> Source</a></div>
         <div *ngIf="selectedDataset.count">Number of genes: {{selectedDataset.count}}</div>
-
+        <div *ngIf="selectedDataset.version">Version: {{selectedDataset.version}}</div>
       </div>
     </div>
   </div>
