change label of atc class L

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
           <span>Explorer</span>
         </a>
         <a routerLink="/drug-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
-          <span class="icon"><i class="fa fa-capsules"></i></span>
+          <span class="icon"><i class="fa fa-search"></i></span>
           <span>Drug</span>
         </a>
         <a routerLink="/cite" routerLinkActive="is-active" class="navbar-item is-hoverable">
